K8S/auth.yaml
# MONGODB DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
    spec:
      containers:
        - name: auth-mongodb
          image: mongo
          ports:
            - containerPort: 27017

---
# MONGODB SERVICE
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: auth-mongodb
  ports:
    - name: auth-mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017

---
# AUTH DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: bes1815/ticket-auth
          ports:
            - containerPort: 3000
---
# AUTH SERVICE
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
