K8S/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: tickets.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth
              servicePort: 3000
